--- a/client/src/components/closeFriend/closeFriend.css
+++ b/client/src/components/closeFriend/closeFriend.css
@@ -11,3 +11,9 @@
     object-fit: cover;
     margin-right: 10px;
   }
+
+  .sidebarFriendName{
+    margin: 7px 10px;
+    text-decoration: none;
+    color: black;
+  }
