--- a/client/src/components/post/post.css
+++ b/client/src/components/post/post.css
@@ -31,7 +31,9 @@
 .postUsername {
   font-size: 15px;
   font-weight: 500;
-  margin: 0 10px;
+  margin: 7px 10px;
+  text-decoration: none;
+  color: black;
 }
 
 .postDate{
@@ -76,3 +78,4 @@
     border-bottom: 1px dashed gray;
     font-size: 15px;
 }
+
